# chroma

./: .gitignore  Cargo.toml  build_swift_package.sh  rust-toolchain.toml
rust/: Cargo.toml
rust/blockstore/: Cargo.toml
rust/cache/: Cargo.toml
rust/frontend/: Cargo.toml
rust/index/: Cargo.toml
rust/sqlite/src/: config.rs
rust/storage/: Cargo.toml
rust/storage/src/: lib.rs  stream.rs
rust/swift_bindings/: .gitignore  Cargo.toml
rust/swift_bindings/Chroma/: Package.swift
rust/swift_bindings/Chroma/.swiftpm/xcode/xcuserdata/nicholasarner.xcuserdatad/xcschemes/: xcschememanagement.plist
rust/swift_bindings/Chroma/ChromaFFI.xcframework/: Info.plist
rust/swift_bindings/Chroma/ChromaFFI.xcframework/ios-arm64_x86_64-simulator/headers/ChromaFFI/: chroma_swift_bindingsFFI.h  module.modulemap
rust/swift_bindings/Chroma/Sources/Chroma/: chroma_swift_bindings.swift
rust/swift_bindings/ChromaTest2/ChromaTest2/: ChromaTest2App.swift  ContentView.swift  PersistentStorageView.swift  SearchDebugView.swift
rust/swift_bindings/ChromaTest2/ChromaTest2.xcodeproj/: project.pbxproj
rust/swift_bindings/ChromaTest2/ChromaTest2.xcodeproj/project.xcworkspace/xcuserdata/nicholasarner.xcuserdatad/: UserInterfaceState.xcuserstate
rust/swift_bindings/ChromaTest2/ChromaTest2.xcodeproj/xcuserdata/nicholasarner.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
rust/swift_bindings/ChromaTest2/ChromaTest2.xcodeproj/xcuserdata/nicholasarner.xcuserdatad/xcschemes/: xcschememanagement.plist
rust/swift_bindings/ChromaTest2/ChromaTest2Tests/: ChromaTest2Tests.swift
rust/swift_bindings/ChromaTest2/ChromaTest2UITests/: ChromaTest2UITests.swift  ChromaTest2UITestsLaunchTests.swift
rust/swift_bindings/src/: lib.rs
rust/worker/: Cargo.toml
