[package]
name = "chroma_swift_bindings"
version = "0.1.0"
edition = "2021"
description = "Swift bindings for the Chroma Rust crate"

[lib]
name = "chroma_swift_bindings"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib", "lib"]

[dependencies]
chroma-distance = { path = "../distance" }
chroma-types = { path = "../types" }
anyhow = { workspace = true }
thiserror = { workspace = true }
libc = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
uniffi = { version = "0.29", features = ["build", "bindgen", "cli"] }
lazy_static = "1.4"
uuid = { workspace = true }

# Swift binding configuration
[package.metadata.swift]
name = "ChromaSwiftFFI"  # Name of the Swift module
ios = true               # Build for iOS
macos = true             # Build for macOS
generate-swift-package = true  # Generate Swift package structure
header = "include/Headers/ChromaSwiftFFI.h"  # Path to C header file
module_map = "include/module.modulemap"  # Path to module map file
