[package]
name = "chroma_swift_bindings"
version = "0.1.0"
edition = "2021"
description = "Swift bindings for the Chroma Rust crate"

[lib]
name = "chroma_swift_bindings"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib", "lib"]

[dependencies]
chroma-distance = { path = "../distance" }
chroma-types = { workspace = true }
chroma-storage = { path = "../storage", default-features = false, features = ["local", "bindgen"] }

# Dependencies from workspace
futures = "0.3"
tempfile = "3.2"
rand = "0.8"
anyhow = "1.0.0"
thiserror = "1.0.0"
libc = { workspace = true }
chrono = { workspace = true }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
uniffi = { version = "0.29", features = ["build", "bindgen", "cli"] }
lazy_static = "1.4.0"
uuid = { workspace = true }

# No AWS dependencies - using only local storage features

# Swift binding configuration
[package.metadata.swift]
name = "ChromaSwiftFFI"  # Name of the Swift module
ios = true               # Build for iOS
macos = true             # Build for macOS
generate-swift-package = true  # Generate Swift package structure
header = "include/Headers/ChromaSwiftFFI.h"  # Path to C header file
module_map = "include/module.modulemap"  # Path to module map file
